testfx/errors/error_tests/err_13_invalid_type.fx
// 测试13: 类型注解错误 - 无效的类型名
x :[invalid]= 10
